[tool]
[tool.poetry]
authors = ["Benjy Marks <benjy.marks@sydney.edu.au>"]
description = "This is a simulator for covid spreading as part of the SUCE Data Science Winter School."
name = "covid-game"
version = "0.1.0"
[tool.poetry.dependencies]
matplotlib = "*"
numpy = "*"
python = "^3.8"
[tool.poetry.dev-dependencies]
pytest = "^3.4"
